--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-perfect-scrollbar": "^10.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "wkx": "^0.5.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
