--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/leaflet": "^1.5.21",
     "bootstrap": "^5.0.0-beta2",
     "leaflet": "^1.7.1",
+    "ng-http-loader": "^9.1.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "rxjs": "~6.6.0",
